update extracting sinogram state in preprocessing

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,11 +1260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Extracting sinogram from dcm dataset: 100%|█████████████████████████| 264078/264078 [00:10<00:00, 24189.24it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "for idx, row in tqdm(df.iterrows(), total=len(df.index), desc='Extracting sinogram from dcm dataset'):\n",
+    "    npy_path = os.path.join(sinogram_path, f'{idx}.npy')\n",
+    "    if os.path.exists(npy_path):\n",
+    "      continue\n",
+    "    \n",
     "    sino = ImagePreparationUtil.read_as_sinogram(os.path.join(TRAIN_DATA_PATH, f'{idx}.dcm'), IMAGE_SIZE, radonobj)\n",
     "    np.save(os.path.join(sinogram_path, f'{idx}.npy'), arr=sino)"
    ]
