fix data path in data generator

--- a/efficientnet/efb4_multiclass_sinogram.ipynb
+++ b/efficientnet/efb4_multiclass_sinogram.ipynb
@@ -455,7 +455,7 @@
     "        train_data_gen = TrainSinoDataGenerator(\n",
     "            img_ids=train_df.index, \n",
     "            labels=train_df,\n",
-    "            img_dir=TRAIN_DATA_PATH,\n",
+    "            img_dir=TRAIN_SINOGRAM_DATA_PATH,\n",
     "            img_shape=self.input_shape,\n",
     "            num_classes=self.num_classes,\n",
     "            batch_size=self.batch_size,\n",
@@ -467,7 +467,7 @@
     "        valid_data_gen = TrainSinoDataGenerator(\n",
     "            img_ids=valid_df.index, \n",
     "            labels=valid_df,\n",
-    "            img_dir=TRAIN_DATA_PATH,\n",
+    "            img_dir=TRAIN_SINOGRAM_DATA_PATH,\n",
     "            img_shape=self.input_shape,\n",
     "            num_classes=self.num_classes,\n",
     "            batch_size=self.batch_size,\n",
@@ -592,18 +592,6 @@
    "display_name": "capstone",
    "language": "python",
    "name": "capstone"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.15"
   }
  },
  "nbformat": 4,
