add tp,tn,fp, and fn metrics in sinogram model kernel

--- a/efficientnet/efb4_multiclass_sinogram.ipynb
+++ b/efficientnet/efb4_multiclass_sinogram.ipynb
@@ -434,12 +434,16 @@
     "            loss=keras.losses.BinaryCrossentropy(), \n",
     "            optimizer=keras.optimizers.Adam(learning_rate=self.learning_rate),\n",
     "            metrics=[\n",
+    "                keras.metrics.TruePositives(name='tp'),\n",
+    "                keras.metrics.TrueNegatives(name='tn'),\n",
+    "                keras.metrics.FalsePositives(name='fp'),\n",
+    "                keras.metrics.FalseNegatives(name='fn'),\n",
     "                keras.metrics.BinaryAccuracy(name='binary_acc'), \n",
     "                keras.metrics.Precision(name='precision'),\n",
     "                keras.metrics.Recall(name='recall'),\n",
     "                keras.metrics.AUC(name='auc_roc', curve='ROC'),\n",
     "                keras.metrics.AUC(name='auc_pr', curve='PR'),\n",
-    "                keras.metrics.F1Score(name='f1_score'),\n",
+    "                keras.metrics.F1Score(name='f1_score'),                \n",
     "            ]\n",
     "        )\n",
     "        \n",
