finish training for sino input

--- a/efficientnetv2/efb4_multilabel_sino.ipynb
+++ b/efficientnetv2/efb4_multilabel_sino.ipynb
@@ -587,13 +587,80 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1: LearningRateScheduler setting learning rate to 0.000125.\n",
+      "Epoch 1/15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1734669973.162622  216448 service.cc:148] XLA service 0x7fe73c003d50 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1734669973.162662  216448 service.cc:156]   StreamExecutor device (0): NVIDIA A100-SXM4-40GB MIG 1g.10gb, Compute Capability 8.0\n",
+      "I0000 00:00:1734669983.116799  216448 cuda_dnn.cc:529] Loaded cuDNN version 90300\n",
+      "E0000 00:00:1734669995.914235  216448 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "E0000 00:00:1734669996.101655  216448 gpu_timer.cc:82] Delay kernel timed out: measured time has sub-optimal accuracy. There may be a missing warmup execution, please investigate in Nsight Systems.\n",
+      "I0000 00:00:1734670059.003130  216448 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 800ms/step - auc_pr: 0.5782 - auc_roc: 0.8643 - binary_acc: 0.8833 - f1_score: 0.2777 - fn: 54437.2891 - fp: 19156.0078 - loss: 0.2811 - precision: 0.7516 - recall: 0.5125 - tn: 533661.2500 - tp: 65129.4844\n",
+      "Epoch 1: val_loss improved from inf to 1.16363, saving model to saved_model/02_EfficientNetB4_V2_sinogram_input/01-1734669867.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6659s\u001b[0m 924ms/step - auc_pr: 0.5782 - auc_roc: 0.8643 - binary_acc: 0.8833 - f1_score: 0.2777 - fn: 54443.7812 - fp: 19158.5820 - loss: 0.2810 - precision: 0.7516 - recall: 0.5125 - tn: 533737.6250 - tp: 65140.0117 - val_auc_pr: 0.1785 - val_auc_roc: 0.5024 - val_binary_acc: 0.8222 - val_f1_score: 0.0341 - val_fn: 42194.0000 - val_fp: 0.0000e+00 - val_loss: 1.1636 - val_precision: 0.0000e+00 - val_recall: 0.0000e+00 - val_tn: 195118.0000 - val_tp: 0.0000e+00 - learning_rate: 1.2500e-04\n",
+      "\n",
+      "Epoch 2: LearningRateScheduler setting learning rate to 9.375e-05.\n",
+      "Epoch 2/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 807ms/step - auc_pr: 0.8245 - auc_roc: 0.9465 - binary_acc: 0.9242 - f1_score: 0.3309 - fn: 34596.9961 - fp: 15823.2539 - loss: 0.1861 - precision: 0.8412 - recall: 0.7055 - tn: 537223.8125 - tp: 84739.9609\n",
+      "Epoch 2: val_loss improved from 1.16363 to 0.37076, saving model to saved_model/02_EfficientNetB4_V2_sinogram_input/02-1734669867.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6495s\u001b[0m 925ms/step - auc_pr: 0.8245 - auc_roc: 0.9465 - binary_acc: 0.9242 - f1_score: 0.3309 - fn: 34601.7031 - fp: 15825.4609 - loss: 0.1861 - precision: 0.8412 - recall: 0.7055 - tn: 537300.5000 - tp: 84752.3047 - val_auc_pr: 0.5804 - val_auc_roc: 0.8386 - val_binary_acc: 0.8642 - val_f1_score: 0.3045 - val_fn: 31065.0000 - val_fp: 1172.0000 - val_loss: 0.3708 - val_precision: 0.9048 - val_recall: 0.2638 - val_tn: 193942.0000 - val_tp: 11133.0000 - learning_rate: 9.3750e-05\n",
+      "\n",
+      "Epoch 3: LearningRateScheduler setting learning rate to 7.031250000000001e-05.\n",
+      "Epoch 3/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 800ms/step - auc_pr: 0.8964 - auc_roc: 0.9696 - binary_acc: 0.9436 - f1_score: 0.3642 - fn: 24742.1035 - fp: 13021.2295 - loss: 0.1404 - precision: 0.8792 - recall: 0.7916 - tn: 539819.4375 - tp: 94801.2578\n",
+      "Epoch 3: val_loss improved from 0.37076 to 0.28995, saving model to saved_model/02_EfficientNetB4_V2_sinogram_input/03-1734669867.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6433s\u001b[0m 915ms/step - auc_pr: 0.8964 - auc_roc: 0.9696 - binary_acc: 0.9436 - f1_score: 0.3642 - fn: 24745.5605 - fp: 13023.0703 - loss: 0.1404 - precision: 0.8792 - recall: 0.7916 - tn: 539896.5000 - tp: 94814.8203 - val_auc_pr: 0.7001 - val_auc_roc: 0.8957 - val_binary_acc: 0.8878 - val_f1_score: 0.3360 - val_fn: 15618.0000 - val_fp: 11007.0000 - val_loss: 0.2900 - val_precision: 0.7071 - val_recall: 0.6299 - val_tn: 184110.0000 - val_tp: 26577.0000 - learning_rate: 7.0312e-05\n",
+      "\n",
+      "Epoch 4: LearningRateScheduler setting learning rate to 5.2734375e-05.\n",
+      "Epoch 4/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 810ms/step - auc_pr: 0.9399 - auc_roc: 0.9838 - binary_acc: 0.9596 - f1_score: 0.3911 - fn: 16998.3848 - fp: 9936.7451 - loss: 0.1021 - precision: 0.9114 - recall: 0.8560 - tn: 542852.6875 - tp: 102596.1875\n",
+      "Epoch 4: val_loss did not improve from 0.28995\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6509s\u001b[0m 927ms/step - auc_pr: 0.9399 - auc_roc: 0.9838 - binary_acc: 0.9596 - f1_score: 0.3911 - fn: 17000.7559 - fp: 9938.1719 - loss: 0.1021 - precision: 0.9114 - recall: 0.8560 - tn: 542930.2500 - tp: 102610.8281 - val_auc_pr: 0.4738 - val_auc_roc: 0.7429 - val_binary_acc: 0.8552 - val_f1_score: 0.3513 - val_fn: 32584.0000 - val_fp: 1788.0000 - val_loss: 0.6827 - val_precision: 0.8432 - val_recall: 0.2278 - val_tn: 193326.0000 - val_tp: 9614.0000 - learning_rate: 5.2734e-05\n",
+      "\n",
+      "Epoch 5: LearningRateScheduler setting learning rate to 3.955078125e-05.\n",
+      "Epoch 5/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 814ms/step - auc_pr: 0.9683 - auc_roc: 0.9922 - binary_acc: 0.9730 - f1_score: 0.4084 - fn: 11170.9141 - fp: 7047.7144 - loss: 0.0698 - precision: 0.9397 - recall: 0.9061 - tn: 546072.4375 - tp: 108092.9375\n",
+      "Epoch 5: val_loss did not improve from 0.28995\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6556s\u001b[0m 933ms/step - auc_pr: 0.9683 - auc_roc: 0.9922 - binary_acc: 0.9730 - f1_score: 0.4084 - fn: 11172.5322 - fp: 7048.7593 - loss: 0.0698 - precision: 0.9397 - recall: 0.9061 - tn: 546150.3125 - tp: 108108.3828 - val_auc_pr: 0.6359 - val_auc_roc: 0.8331 - val_binary_acc: 0.8899 - val_f1_score: 0.3884 - val_fn: 23057.0000 - val_fp: 3079.0000 - val_loss: 0.4357 - val_precision: 0.8614 - val_recall: 0.4536 - val_tn: 192037.0000 - val_tp: 19139.0000 - learning_rate: 3.9551e-05\n",
+      "\n",
+      "Epoch 6: LearningRateScheduler setting learning rate to 2.96630859375e-05.\n",
+      "Epoch 6/15\n",
+      "\u001b[1m1446/7003\u001b[0m \u001b[32m━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1:14:17\u001b[0m 802ms/step - auc_pr: 0.9835 - auc_roc: 0.9963 - binary_acc: 0.9819 - f1_score: 0.4157 - fn: 1552.4938 - fp: 965.2628 - loss: 0.0488 - precision: 0.9601 - recall: 0.9363 - tn: 113427.8047 - tp: 22966.4414"
+     ]
+    }
+   ],
    "source": [
     "np.random.shuffle(train_idx)\n",
     "\n",
     "hist = model.fit(df.iloc[train_idx], df.iloc[valid_idx])\n",
     "model.save('Best_EfficientNetB4_V2_sinogram_input.keras')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
