done training for v3

--- a/efficientnetv3/multilabel_img.ipynb
+++ b/efficientnetv3/multilabel_img.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,15 +631,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch 1: LearningRateScheduler setting learning rate to 0.000125.\n",
+      "Epoch 1/15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1734896079.434523  243593 service.cc:148] XLA service 0x7f6fb8002d10 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1734896079.434580  243593 service.cc:156]   StreamExecutor device (0): NVIDIA A100-SXM4-40GB MIG 1g.10gb, Compute Capability 8.0\n",
+      "I0000 00:00:1734896088.347894  243593 cuda_dnn.cc:529] Loaded cuDNN version 90300\n",
+      "I0000 00:00:1734896149.865054  243593 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 364ms/step - auc_pr: 0.7063 - auc_roc: 0.9119 - binary_acc: 0.9081 - f1_score: 0.1679 - fn: 37457.8867 - fp: 17145.7285 - loss: 0.2254 - precision: 0.7986 - recall: 0.6496 - tn: 535827.5000 - tp: 81952.8672\n",
+      "Epoch 1: saving model to saved_model/EfficientNetB4_V3_image_input/01-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3099s\u001b[0m 419ms/step - auc_pr: 0.7063 - auc_roc: 0.9119 - binary_acc: 0.9081 - f1_score: 0.1679 - fn: 37462.0742 - fp: 17147.7832 - loss: 0.2254 - precision: 0.7986 - recall: 0.6496 - tn: 535904.3750 - tp: 81965.7188 - val_auc_pr: 0.7943 - val_auc_roc: 0.9403 - val_binary_acc: 0.9144 - val_f1_score: 0.2795 - val_fn: 17130.0000 - val_fp: 3187.0000 - val_loss: 0.2122 - val_precision: 0.8872 - val_recall: 0.5940 - val_tn: 191931.0000 - val_tp: 25064.0000 - learning_rate: 1.2500e-04\n",
+      "\n",
+      "Epoch 2: LearningRateScheduler setting learning rate to 7.5e-05.\n",
+      "Epoch 2/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 365ms/step - auc_pr: 0.9175 - auc_roc: 0.9763 - binary_acc: 0.9527 - f1_score: 0.2799 - fn: 20105.7539 - fp: 11220.3457 - loss: 0.1233 - precision: 0.8967 - recall: 0.8280 - tn: 542125.5625 - tp: 98932.3438\n",
+      "Epoch 2: saving model to saved_model/EfficientNetB4_V3_image_input/02-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2947s\u001b[0m 418ms/step - auc_pr: 0.9175 - auc_roc: 0.9763 - binary_acc: 0.9527 - f1_score: 0.2799 - fn: 20108.5039 - fp: 11221.9160 - loss: 0.1233 - precision: 0.8967 - recall: 0.8280 - tn: 542202.8750 - tp: 98946.6875 - val_auc_pr: 0.9144 - val_auc_roc: 0.9728 - val_binary_acc: 0.9497 - val_f1_score: 0.2454 - val_fn: 7713.0000 - val_fp: 4224.0000 - val_loss: 0.1338 - val_precision: 0.8909 - val_recall: 0.8172 - val_tn: 190890.0000 - val_tp: 34485.0000 - learning_rate: 7.5000e-05\n",
+      "\n",
+      "Epoch 3: LearningRateScheduler setting learning rate to 4.4999999999999996e-05.\n",
+      "Epoch 3/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 365ms/step - auc_pr: 0.9576 - auc_roc: 0.9882 - binary_acc: 0.9672 - f1_score: 0.3234 - fn: 13506.1074 - fp: 8297.6768 - loss: 0.0861 - precision: 0.9273 - recall: 0.8849 - tn: 544692.8125 - tp: 105887.3906\n",
+      "Epoch 3: saving model to saved_model/EfficientNetB4_V3_image_input/03-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2944s\u001b[0m 418ms/step - auc_pr: 0.9576 - auc_roc: 0.9882 - binary_acc: 0.9672 - f1_score: 0.3234 - fn: 13507.9775 - fp: 8298.8564 - loss: 0.0861 - precision: 0.9273 - recall: 0.8849 - tn: 544770.5625 - tp: 105902.5547 - val_auc_pr: 0.8061 - val_auc_roc: 0.9287 - val_binary_acc: 0.9188 - val_f1_score: 0.3087 - val_fn: 15728.0000 - val_fp: 3549.0000 - val_loss: 0.2559 - val_precision: 0.8818 - val_recall: 0.6273 - val_tn: 191568.0000 - val_tp: 26467.0000 - learning_rate: 4.5000e-05\n",
+      "\n",
+      "Epoch 4: LearningRateScheduler setting learning rate to 2.6999999999999996e-05.\n",
+      "Epoch 4/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 365ms/step - auc_pr: 0.9780 - auc_roc: 0.9943 - binary_acc: 0.9781 - f1_score: 0.3361 - fn: 8964.9434 - fp: 5802.9541 - loss: 0.0588 - precision: 0.9505 - recall: 0.9247 - tn: 547265.3750 - tp: 110350.7422\n",
+      "Epoch 4: saving model to saved_model/EfficientNetB4_V3_image_input/04-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2951s\u001b[0m 418ms/step - auc_pr: 0.9780 - auc_roc: 0.9943 - binary_acc: 0.9781 - f1_score: 0.3361 - fn: 8966.1953 - fp: 5803.7881 - loss: 0.0588 - precision: 0.9505 - recall: 0.9247 - tn: 547343.4375 - tp: 110366.5469 - val_auc_pr: 0.9278 - val_auc_roc: 0.9762 - val_binary_acc: 0.9568 - val_f1_score: 0.3434 - val_fn: 5899.0000 - val_fp: 4350.0000 - val_loss: 0.1312 - val_precision: 0.8930 - val_recall: 0.8602 - val_tn: 190764.0000 - val_tp: 36299.0000 - learning_rate: 2.7000e-05\n",
+      "\n",
+      "Epoch 5: LearningRateScheduler setting learning rate to 1.62e-05.\n",
+      "Epoch 5/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 369ms/step - auc_pr: 0.9875 - auc_roc: 0.9970 - binary_acc: 0.9844 - f1_score: 0.3285 - fn: 6249.5928 - fp: 4183.8306 - loss: 0.0421 - precision: 0.9641 - recall: 0.9469 - tn: 549375.2500 - tp: 112575.3359\n",
+      "Epoch 5: saving model to saved_model/EfficientNetB4_V3_image_input/05-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2975s\u001b[0m 422ms/step - auc_pr: 0.9875 - auc_roc: 0.9970 - binary_acc: 0.9844 - f1_score: 0.3285 - fn: 6250.4736 - fp: 4184.4307 - loss: 0.0421 - precision: 0.9641 - recall: 0.9469 - tn: 549453.5000 - tp: 112591.5781 - val_auc_pr: 0.9266 - val_auc_roc: 0.9746 - val_binary_acc: 0.9575 - val_f1_score: 0.3385 - val_fn: 5265.0000 - val_fp: 4825.0000 - val_loss: 0.1390 - val_precision: 0.8844 - val_recall: 0.8752 - val_tn: 190291.0000 - val_tp: 36931.0000 - learning_rate: 1.6200e-05\n",
+      "\n",
+      "Epoch 6: LearningRateScheduler setting learning rate to 9.719999999999998e-06.\n",
+      "Epoch 6/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 366ms/step - auc_pr: 0.9921 - auc_roc: 0.9981 - binary_acc: 0.9881 - f1_score: 0.3203 - fn: 4708.2856 - fp: 3275.8035 - loss: 0.0324 - precision: 0.9725 - recall: 0.9606 - tn: 549465.0000 - tp: 114934.9219\n",
+      "Epoch 6: saving model to saved_model/EfficientNetB4_V3_image_input/06-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2987s\u001b[0m 423ms/step - auc_pr: 0.9921 - auc_roc: 0.9981 - binary_acc: 0.9881 - f1_score: 0.3203 - fn: 4708.9688 - fp: 3276.2749 - loss: 0.0324 - precision: 0.9725 - recall: 0.9606 - tn: 549543.5000 - tp: 114951.2422 - val_auc_pr: 0.9224 - val_auc_roc: 0.9730 - val_binary_acc: 0.9569 - val_f1_score: 0.3155 - val_fn: 5242.0000 - val_fp: 4989.0000 - val_loss: 0.1476 - val_precision: 0.8811 - val_recall: 0.8758 - val_tn: 190120.0000 - val_tp: 36961.0000 - learning_rate: 9.7200e-06\n",
+      "\n",
+      "Epoch 7: LearningRateScheduler setting learning rate to 5.8319999999999985e-06.\n",
+      "Epoch 7/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 362ms/step - auc_pr: 0.9940 - auc_roc: 0.9985 - binary_acc: 0.9901 - f1_score: 0.3255 - fn: 3870.7041 - fp: 2727.3396 - loss: 0.0275 - precision: 0.9767 - recall: 0.9676 - tn: 550151.6875 - tp: 115634.2422\n",
+      "Epoch 7: saving model to saved_model/EfficientNetB4_V3_image_input/07-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2923s\u001b[0m 414ms/step - auc_pr: 0.9940 - auc_roc: 0.9985 - binary_acc: 0.9901 - f1_score: 0.3255 - fn: 3871.2546 - fp: 2727.7322 - loss: 0.0275 - precision: 0.9767 - recall: 0.9676 - tn: 550230.2500 - tp: 115650.7188 - val_auc_pr: 0.9305 - val_auc_roc: 0.9741 - val_binary_acc: 0.9621 - val_f1_score: 0.3519 - val_fn: 5114.0000 - val_fp: 3881.0000 - val_loss: 0.1428 - val_precision: 0.9053 - val_recall: 0.8788 - val_tn: 191231.0000 - val_tp: 37086.0000 - learning_rate: 5.8320e-06\n",
+      "\n",
+      "Epoch 8: LearningRateScheduler setting learning rate to 3.4991999999999995e-06.\n",
+      "Epoch 8/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 366ms/step - auc_pr: 0.9949 - auc_roc: 0.9988 - binary_acc: 0.9912 - f1_score: 0.3263 - fn: 3483.5439 - fp: 2445.2883 - loss: 0.0247 - precision: 0.9794 - recall: 0.9707 - tn: 550580.2500 - tp: 115874.9375\n",
+      "Epoch 8: saving model to saved_model/EfficientNetB4_V3_image_input/08-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2982s\u001b[0m 422ms/step - auc_pr: 0.9949 - auc_roc: 0.9988 - binary_acc: 0.9912 - f1_score: 0.3263 - fn: 3484.0369 - fp: 2445.6379 - loss: 0.0247 - precision: 0.9794 - recall: 0.9707 - tn: 550658.8125 - tp: 115891.4844 - val_auc_pr: 0.9295 - val_auc_roc: 0.9735 - val_binary_acc: 0.9622 - val_f1_score: 0.3444 - val_fn: 5042.0000 - val_fp: 3937.0000 - val_loss: 0.1451 - val_precision: 0.9042 - val_recall: 0.8805 - val_tn: 191172.0000 - val_tp: 37161.0000 - learning_rate: 3.4992e-06\n",
+      "\n",
+      "Epoch 9: LearningRateScheduler setting learning rate to 2.0995199999999993e-06.\n",
+      "Epoch 9/15\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 363ms/step - auc_pr: 0.9955 - auc_roc: 0.9989 - binary_acc: 0.9916 - f1_score: 0.3242 - fn: 3255.3865 - fp: 2352.9766 - loss: 0.0231 - precision: 0.9802 - recall: 0.9726 - tn: 550727.4375 - tp: 116048.2266\n",
+      "Epoch 9: saving model to saved_model/EfficientNetB4_V3_image_input/09-1734895985.weights.h5\n",
+      "\u001b[1m7003/7003\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2961s\u001b[0m 420ms/step - auc_pr: 0.9955 - auc_roc: 0.9989 - binary_acc: 0.9916 - f1_score: 0.3242 - fn: 3255.8467 - fp: 2353.3069 - loss: 0.0231 - precision: 0.9802 - recall: 0.9726 - tn: 550806.0000 - tp: 116064.8203 - val_auc_pr: 0.9296 - val_auc_roc: 0.9742 - val_binary_acc: 0.9625 - val_f1_score: 0.3376 - val_fn: 4815.0000 - val_fp: 4079.0000 - val_loss: 0.1446 - val_precision: 0.9016 - val_recall: 0.8859 - val_tn: 191026.0000 - val_tp: 37392.0000 - learning_rate: 2.0995e-06\n",
+      "Epoch 9: early stopping\n",
+      "model saved to: saved_model/EfficientNetB4_V3_image_input/Best_EfficientNetB4_V3_image_input.keras\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.shuffle(train_idx)\n",
     "\n",
     "hist = model.fit(df.iloc[train_idx], df.iloc[valid_idx])\n",
     "model.save('Best_EfficientNetB4_V3_image_input.keras')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
